--- a/scss/civicrm/common/_wizard.scss
+++ b/scss/civicrm/common/_wizard.scss
@@ -2,6 +2,7 @@ ul.wizard-bar {
   width: 100%;
   height: 60px !important;
   background-color: $crm-white;
+  margin-top: 0 !important;
   padding: 0 !important;
   text-align: left !important;
   border: 1px solid $crm-background !important;
